--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,43 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
+
+    <ImageView
+        android:id="@+id/user_avatar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/avatar_description" />
 
     <TextView
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_Login"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimary"/>
+        android:text="user name"
+        android:layout_toRightOf="@id/user_avatar"
+        android:layout_marginLeft="18dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="20dp"
+        android:textSize="24sp"/>
+
+<!--    <Space-->
+<!--        android:id="@+id/space"-->
+<!--        android:layout_below="@id/user_avatar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="8dp"/>-->
+
+    <View
+        android:id="@+id/space"
+        android:layout_below="@id/user_avatar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/space"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_repos" />
